force-app/main/default/objects/Financial_Settings__c/Financial_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Financial Settings</label>
</CustomObject>