force-app/main/default/objects/Financial_Settings__c/fields/Error_Notification_To__c.field-meta.xml
<CustomField>
    <fullName>Error_Notification_To__c</fullName>
    <label>Error Notification To</label>
    <type>Email</type>
</CustomField>