force-app/main/default/objects/Financial_Settings__c/fields/Nominal_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Account_Id__c</fullName>
    <label>Nominal Account Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>