force-app/main/default/objects/Financial_Settings__c/fields/Payment_Run_Line_Item_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Payment_Run_Line_Item_Batch_Size__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Used in the BatchOutboundBACSPayment job.</description>
    <label>Payment Run Line Item Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>