force-app/main/default/objects/Financial_Settings__c/fields/PI_Nominal_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>PI_Nominal_Account_Id__c</fullName>
    <label>Purchase Invoice Nominal Account Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>