force-app/main/default/objects/Financial_Settings__c/fields/Practitioner_Registration_Capped_Fees__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Registration_Capped_Fees__c</fullName>
    <label>Practitioner Registration Capped Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>