force-app/main/default/objects/Financial_Settings__c/fields/Practitioner_Registration_Fees_Rate__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Registration_Fees_Rate__c</fullName>
    <label>Practitioner Registration Fees %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>